--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_settings">Settings</string>
 
+    <string name="empty_content_here">这里空空如也</string>
+
     <string name="lorem_ipsum_title">Lorem Ipsum"</string>
     <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
         typesetting industry. Lorem Ipsum has been the industry\"s standard placeholder text ever
